style background with matrix

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <link rel="stylesheet" href="css/reset.css" type="text/css">
     <link rel="stylesheet" href="css/master.css" type="text/css">
     <script src="lib/entry.js" type="text/javascript" charset="utf-8"></script>
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=VT323|Ubuntu+Mono" rel="stylesheet">
   </head>
   <body>
-    <canvas id= "race-track" height="300" width="900"></canvas>
     <img id="audi" src="images/Audi.png"/>
+    <p class='title'>CODERACER</p>
     <div class='snippet-container'>
-      <pre id="snippet"></pre>
+      <div class="terminal-container">
+        <canvas id= "race-track" height="600" width="920"></canvas>
+        <img class="terminal" src="images/terminal3.png" alt="computer terminal">
+        <pre id="snippet"></pre>
+      </div>
     </div>
   </body>
 </html>
