add countdown timer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CodeRacer</title>
     <link rel="stylesheet" href="css/reset.css" type="text/css">
     <link rel="stylesheet" href="css/master.css" type="text/css">
-    <script src="lib/entry.js" type="text/javascript" charset="utf-8"></script>
+    <script src="lib/bundle.js" type="text/javascript" charset="utf-8"></script>
     <link href="https://fonts.googleapis.com/css?family=VT323|Ubuntu+Mono" rel="stylesheet">
   </head>
   <body>
@@ -15,7 +15,7 @@
       <div class="terminal-container">
         <canvas id= "race-track" height="600" width="920"></canvas>
         <img class="terminal" src="images/terminal3.png" alt="computer terminal">
-        <pre id="snippet"></pre>
+        <pre id="snippet"><button type="button" id='start'>START</button></pre>
       </div>
     </div>
   </body>
