add computer player asynchronous speed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <img id="audi" src="images/Audi.png"/>
+    <img id="viper" src="images/Black_viper.png"/>
     <p class='title'>CODERACER</p>
     <div class='snippet-container'>
       <div class="terminal-container">
