add intro to start screen

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="terminal-container">
         <canvas id= "race-track" height="600" width="920"></canvas>
         <img class="terminal" src="images/terminal3.png" alt="computer terminal">
-        <pre id="snippet"><button type="button" id='start'>START</button></pre>
+        <pre id="snippet"><section class='intro'><h1>Welcome to CodeRacer!</h1><br><p>Practice your touch typing skills on open source code, while racing other players.</p><br><p>Remember to backspace when the cursor turns red to alert you of your errors.</p><br><p>Click below to begin!</p></section><br><button type="button" id='start'>START</button></pre>
       </div>
     </div>
   </body>
