--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link href="https://fonts.googleapis.com/css?family=VT323|Ubuntu+Mono" rel="stylesheet">
   </head>
   <body>
-    <img id="audi" src="images/Audi.png"/>
-    <img id="viper" src="images/Black_viper.png"/>
+    <img id="audi" class='hidden' src="images/Audi.png"/>
+    <img id="viper" class='hidden' src="images/Black_viper.png"/>
+    <button class='hidden' id='restart'>RESTART</button>
     <p class='title'>CODERACER</p>
-    <div class='snippet-container'>
+    <div id='snippet-container'>
       <div class="terminal-container">
         <canvas id= "race-track" height="600" width="920"></canvas>
         <img class="terminal" src="images/terminal3.png" alt="computer terminal">
-        <pre id="snippet"><section class='intro'><h1>Welcome to CodeRacer!</h1><br><p>Practice your touch typing skills on open source code, while racing other players.</p><br><p>Remember to backspace when the cursor turns red to alert you of your errors.</p><br><p>Click below to begin!</p></section><br><button type="button" id='start'>START</button></pre>
+        <pre id="snippet"><section class='intro'><h1>Welcome to CodeRacer!</h1><br><p>Practice your touch typing skills on open source code, while racing other players.</p><br><p>Remember to backspace when the cursor turns red to alert you of your errors.</p><br><p>Click below to begin!</p></section><br><button id='start'>START</button></pre>
       </div>
     </div>
   </body>
